# OS_labs

KP/: client.c  server.c  structs.h
Lab1/: CMakeLists.txt
Lab1/doc/: protocol.txt
Lab1/src/: ChildProcess.c  ParentProcess.c
Lab1/test/: test_example.cpp
Lab2/: 215_Моисеев_Лаб2.docx  CMakeLists.txt
Lab2/src/: main.c
Lab2/tests/: input.txt  test_100x100.txt  test_4x4.txt
Lab3/src/: child.c  parent.c
Lab3/test/: test.txt
Lab4/: makefile
Lab4/include/: GCF.h  Pi.h
Lab4/src/: GCF_Euclid.c  GCF_Naive.c  Pi_Leibniz.c  Pi_Wallis.c
Lab4/test/: TestProgram1.c  TestProgram2.c
Lab5-7/: 215_Моисеев_Лаб5-7.docx  CMakeLists.txt  client.cpp  node.h  worker.cpp  ~$5_Моисеев_Лаб5-7.docx
Lab8/: 215_Моисеев_Лаб8.docx
